Closed Bug 402660 Opened 18 years ago Closed 18 years ago

wrong default titlebar color values on Mac OS X 10.4

Categories

(Core :: Widget: Cocoa, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: jaas, Assigned: jaas)

Details

(Keywords: regression)

Attachments

(1 file)

Attached patch fix v1.0Splinter Review
We have the wrong default titlebar color values on Mac OS X 10.4. This is a regression from bug 303110.
Attachment #287507 - Flags: review?(cbarrett)
Flags: blocking1.9+
Comment on attachment 287507 [details] [diff] [review] fix v1.0 We shouldn't have to call OnLeopardOrBetter for every line in the header shading every time it gets drawn. At the very least we can pass in the greys in aInfo.
Attachment #287507 - Flags: review?(cbarrett) → review-
Comment on attachment 287507 [details] [diff] [review] fix v1.0 josh pointed out on irc that OnLeopardOrBetter is not an expensive call. If it shows up on profiles, we'll deal with it then, but looking at the code, I kind of doubt it.
Attachment #287507 - Flags: review- → review+
Attachment #287507 - Flags: superreview?(roc)
Attachment #287507 - Flags: superreview?(roc) → superreview+
landed on trunk
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: