fix default titlebar color values on Mac OS X 10.4. b=402660 r=cbarrett sr=roc